--- a/materiales/templates/components/header.html
+++ b/materiales/templates/components/header.html
@@ -62,6 +62,55 @@
                 <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
             </a>
         </div>
+    {% elif request.resolver_match.url_name == 'editar_libro' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR LIBRO</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
+    {% elif request.resolver_match.url_name == 'editar_mapa' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR MAPA</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
+    {% elif request.resolver_match.url_name == 'editar_programa' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR PROGRAMA</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
+    {% elif request.resolver_match.url_name == 'editar_multimedia' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR MULTIMEDIA</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
+    {% elif request.resolver_match.url_name == 'editar_notebook' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR NOTEBOOK</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
+    {% elif request.resolver_match.url_name == 'editar_proyector' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR PROYECTOR</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
+    {% elif request.resolver_match.url_name == 'editar_varios' %}
+        <div class="header-pantalla">
+            <h1 class="header-title-centered">EDITAR VARIOS</h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
     {% endif %}
 
 </header>
