arreglo en modificacion

--- a/materiales/templates/materiales/formularios_editar/modificacion_materiales.html
+++ b/materiales/templates/materiales/formularios_editar/modificacion_materiales.html
@@ -907,7 +907,7 @@
                             {% endif %}
                         </td>
                         <td class="acciones-cell">
-                            <a href="{% url 'editar_multimedia' multi.id_inventario %}" class="btn-icon btn-editar" title="Editar">
+                            <a href="{% url 'editar_multimedia' multi.id_multi %}" class="btn-icon btn-editar" title="Editar">
                                 ✏️
                             </a>
                             {% if multi.estado == 'Disponible' %}
