alertas funcionando en los distintos materiales con sus estilos, carg masiv 2y libro1

--- a/materiales/templates/modals/alertas/archivo_novalido.html
+++ b/materiales/templates/modals/alertas/archivo_novalido.html
@@ -34,8 +34,8 @@ SELECCIONANDO UN ARCHIVO
     min-width: 280px;
     padding: 0.6em 0.6em;
     text-align: center;
-    background-color: #FFC0CB !important;
-    background: #FFC0CB !important;
+    background-color: #FFB3BA !important;
+    background: #FFB3BA !important;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     border: 2px solid #FF0000;
 }
