--- a/materiales/templates/modals/alertas/reducir_ejemplares.html
+++ b/materiales/templates/modals/alertas/reducir_ejemplares.html
@@ -34,7 +34,8 @@ CANTIDAD SELECCIONADA
     min-width: 300px;
     padding: 0.8em 0.8em;
     text-align: center;
-    background: #FFB3BA;
+    background-color: #FFB3BA !important;
+    background: #FFB3BA !important;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     border: 2px solid #FF0000;
 }
